--- a/scss/main.scss
+++ b/scss/main.scss
@@ -164,9 +164,11 @@ html, body {
   }
   #middle {
     margin: 0;
+    height: 23.5rem;
     padding: .5rem 0;
     position: relative;
     background: white;
+    @extend %basic-flex;
     #score-board {
         p {
           text-align: center;
@@ -178,7 +180,7 @@ html, body {
     #progress-bars {
       width: 50%;
       min-width: 20rem;
-      margin: 2.5rem auto 3rem;
+      margin: 1rem 0;
       #round-holder, #session-holder {
         margin: 1rem auto;
         background: green;
@@ -211,7 +213,7 @@ html, body {
     }
     #prob-div {
       width:  100%;
-      margin: 1.5rem auto 2.5rem;
+      margin: 1.5rem 0;
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
@@ -321,7 +323,7 @@ html, body {
           border: none;
           color: #C7C7C7;
           font-size: 1.5rem;
-          background: #646464;
+          background: transparent;
           top: 0;
           right: 0;
         }
